@@ -1,3 +1,7 @@
+2008-09-23	delx
+
+	* Transparency doesn't work in full-screen, so disable it.
+
 2008-09-22  fabian
     
     * Fixed a bug that enables blur when de-miniaturizing windows.
